--- a/my-page/src/components/Header/Header.scss
+++ b/my-page/src/components/Header/Header.scss
@@ -11,11 +11,20 @@
   }
 
   .header__logo-link {
+    position: relative;
     display: block;
     background-image: none;
     height: 100%;
     text-decoration: none;
     text-shadow: none;
+
+    &:hover {
+
+      .header__logo-house {
+
+        animation: angelHomeHover .5s;
+      }
+    }
   }
 
   .header__logo-img {
@@ -23,20 +32,48 @@
     max-height: 100%;
     margin: auto;
   }
-  
-  .header__nav {
-    
+
+  @keyframes angelHome {
+    from {
+      transform: rotate(0deg);
+    }
+
+    to {
+      transform: rotate(15deg);
+    }
   }
-  
+
+  @keyframes angelHomeHover {
+    from {
+      transform: rotate(15deg);
+    }
+
+    to {
+      transform: rotate(0deg);
+    }
+  }
+
+  .header__logo-house {
+    position: absolute;
+    bottom: -15px;
+    right: -15px;
+    animation: angelHome .5s;
+    animation-fill-mode: forwards;
+  }
+
+  .header__nav {
+
+  }
+
   .nav {
     display: flex;
     margin: 0 -15px;
   }
-  
+
   .nav__item {
     padding: 15px;
   }
-  
+
   .nav__link {
 
   }
