--- a/my-page/src/components/Social/Social.scss
+++ b/my-page/src/components/Social/Social.scss
@@ -14,8 +14,35 @@
   }
 
   .social__link {
+    display: block;
+    position: relative;
     width: 30px;
     height: 30px;
     background-image: none;
+
+
+    &:hover {
+
+      img {
+        animation: mymoove  0.3s infinite ease-in-out;
+      }
+    }
+
+  }
+  @keyframes mymoove {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(5deg);
+    }
+  }
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+
+
   }
 }
